style fix un intended horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -151,6 +151,13 @@ body {
   height: 45vh;
 }
 
+.w-layout-blockcontainer {
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
 .layout-vhs-home {
   grid-column-gap: 1.5rem;
   grid-row-gap: 1.5rem;
@@ -159,4 +166,50 @@ body {
   padding-top: 3vw;
   padding-bottom: 2.4vw;
   display: flex;
+}
+
+.cl-list-wrapper-small {
+  flex-flow: row;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  display: flex;
+}
+
+.cl-list-wrapper-small {
+  flex-flow: row;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  display: flex;
+}
+
+.cl-layout-vhs-small {
+  grid-column-gap: 0px;
+  grid-row-gap: 3rem;
+  perspective-origin: 50%;
+  transform-origin: 0 0;
+  flex: 1;
+  place-content: space-between center;
+  align-items: stretch;
+  margin-bottom: 1rem;
+  display: flex;
+}
+
+.cl-list-vhs-small {
+  z-index: 0;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  justify-content: center;
+  align-items: stretch;
+  width: 100%;
+  height: 100%;
+  margin-left: -1px;
+  margin-right: -1px;
+  padding-left: 0;
+  padding-right: 0;
+  display: flex;
+  position: relative;
 }
